@@ -7,6 +7,7 @@ Release 0.7.0: Unreleased
 INCOMPATIBLE CHANGES
 
 ALL CHANGES:
+  TEZ-1827. MiniTezCluster takes 10 minutes to shut down.
   TEZ-2178. YARN-3122 breaks tez compilation with hadoop 2.7.0.
   TEZ-2174. Make task priority available to TaskAttemptListener.
   TEZ-2169. Add NDC context to various threads and pools.
